<resources>
    <string name="app_name">CricFlex</string>
    <string name="profile">Profile</string>
    <string name="setup_profile">Setup Profile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>
    <string name="slide_1_title">What is Cricflex</string>
    <string name="slide_1_desc">World\'s first wearable to detect illegal bowling action in cricket</string>
    <string name="slide_2_title">Comfortable Band</string>
    <string name="slide_2_desc">Arm angle, start of action and release point detection</string>
    <string name="slide_3_title">Player Profile</string>
    <string name="slide_3_desc">Keeps record of all the balls and also maintain user profile on server</string>
    <string name="slide_4_title">Data Analytics</string>
    <string name="slide_4_desc">Data analytics (DA) is the science of examining raw data with the purpose of drawing conclusions about that information.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password</string>
    <string name="login_button">Login</string>
    <string name="register">Register new account</string>
    <string name="rgp_name">Name</string>
    <string name="rgp_username">Username (6 minimum)</string>
    <string name="rgp_email">Email</string>
    <string name="rgp_password">Password(6 minimum)</string>
    <string name="rgp_security_question">Security Question: \nFavourite Cricketer name?</string>
    <string name="rgp_button_registe">Register new account</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="enter_weight_here">Enter here</string>
    <string name="KG">KG</string>
    <string name="location">Location</string>
    <string name="select_country">Select your country</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="stp_button_next">Next</string>
    <string name="bowling_arm">Bowling Arm</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="bowling_style">Bowling Style</string>
    <string name="career_level">Career Level</string>
    <string name="stp_button_done">Done</string>
    <string name="age">Age</string>
    <string-array name="bowlingstyle_left_array">
        <item>Left Arm Fast</item>
        <item>Left Arm Medium Fast</item>
        <item>Left Arm Off break </item>
        <item>Left Arm Leg break </item>
        <item>Slow Left Arm Orthodox</item>
        <item>Slow Left Arm Chinaman</item>
    </string-array>
    <string-array name="bowlingstyle_right_array">
        <item>Right Arm Fast</item>
        <item>Right Arm Medium Fast</item>
        <item>Right Arm Off break </item>
        <item>Right Arm Leg break </item>
    </string-array>
    <string-array name="careerlevel_array">
        <item>Club</item>
        <item>National</item>
        <item>International</item>
    </string-array>
    <string-array name="bowlingstyle_array">
        <item>Left Arm Fast</item>
        <item>Left Arm Medium Fast</item>
        <item>Left Arm Off break </item>
        <item>Left Arm Leg break </item>
        <item>Slow Left Arm Orthodox</item>
        <item>Slow Left Arm Chinaman</item>
    </string-array>
    <string name="straighten_arm">Straighten the arm</string>
    <string name="bend_arm_45">Bend arm at 45\u00b0</string>
    <string name="twist_left">Twist arm to Left</string>
    <string name="twist_right">Twist arm to Right</string>
    <string name="calibrate_button_next">Next</string>
    <string name="calibrate_button_done">Done</string>
    <string name="enter_username">Enter Username</string>
    <string name="security_question">Security Question \nYour Favourite Player?</string>
    <string name="new_password">Set New Password</string>
    <string name="fgp_button_next">Next</string>
    <string name="fgp_button_done">Done</string>
    <string name="muhammad_asawal">Muhammad Asawal</string>
    <string name="asawal_email">asawal@cricflex.com</string>
    <string name="monitor_monitoring">Monitoring&#8230;</string>
    <string name="monitor_connecting">Connecting&#8230;</string>
    <string name="monitor_angle">0\u00b0</string>
    <string name="monitor_force">0 N</string>
    <string name="monitor_time">0.0s</string>
    <string name="monitor_twist">0\u00b0</string>
    <string name="monitor_force_text">Force</string>
    <string name="monitor_time_text">Action Time</string>
    <string name="monitor_twist_text">Arm Twist</string>
    <string name="monitor_legal">0</string>
    <string name="monitor_illegal">0</string>
    <string name="monitor_legal_text">Legal Balls</string>
    <string name="monitor_illegal_text">Illegal Balls</string>
    <string name="monitor_finish_button">END SESSION</string>
    <string name="cal_ok">Ok</string>
    <string name="cal_step1">Step 1</string>
    <string name="cal_step2">Step 2</string>
    <string name="cal_step3">Step 3</string>
    <string name="cal_step4">Step 4</string>
    <string name="cal_step1_desc">Straighten your elbow across the straight strip (provided with the band).</string>
    <string name="cal_step2_desc">Bend your elbow across the 45° angled strip (provided with the band).</string>
    <string name="cal_step3_desc">Twist your arm towards your right as much as you can.</string>
    <string name="cal_step4_desc">Twist your arm towards your left as much as you can.</string>
    <string name="session_stats">Session Stats</string>
    <string name="session_armflex">0\u00b0</string>
    <string name="session_force">0 N</string>
    <string name="session_time">0.0s</string>
    <string name="session_twist">0\u00b0</string>
    <string name="session_armflex_text">Arm Flex</string>
    <string name="session_force_text">Force</string>
    <string name="session_time_text">Action Time</string>
    <string name="session_twist_text">Arm Twist</string>
    <string name="session_button_finish">FINISH</string>
    <string name="button_edit_profile">Edit</string>
    <string name="cancel_edit_profile">Cancel</string>
    <string name="save_edit_profile">Save</string>
    <string name="legal_illegal_ratio">Legal to Illegal Ball Ratio</string>
    <string name="home_total_balls">0</string>
    <string name="home_total_balls_text">Total Balls: </string>
    <string name="home_average_stats">Average\nBowling\nStats</string>
    <string name="home_armflex">0\u00b0</string>
    <string name="home_force">0 N</string>
    <string name="home_time">0 s</string>
    <string name="home_twist">0\u00b0</string>
    <string name="home_armflex_text">Arm Flex</string>
    <string name="home_force_text">Force</string>
    <string name="home_time_text">Action Time</string>
    <string name="home_twist_text">Arm Twist</string>
    <string name="home_button_start">START BOWLING !</string>
    <string name="history_month_year">January 1995</string>
    <string name="history_tab_angle">Angle</string>
    <string name="history_tab_force">Force</string>
    <string name="history_tab_time">Time</string>
    <string name="history_tab_twist">Twist</string>
    <string name="history_angle_text">Angle</string>
    <string name="history_force_text">Force</string>
    <string name="history_time_text">Time</string>
    <string name="history_twist_text">Twist</string>
    <string name="history_over">Overs</string>
    <string name="history_stat_maximum">Maximum</string>
    <string name="history_stat_minimum">Minimum</string>
    <string name="history_stat_average">Average</string>
    <string name="history_stat_maximum_value">0.0</string>
    <string name="history_stat_minimum_value">0.0</string>
    <string name="history_stat_average_value">0.0</string>
    <string name="team_cricflex">Team CricFlex</string>
    <string name="asawal">Muhammad\nAsawal</string>
    <string name="abdullah">Abdullah\nAhmed</string>
    <string name="jazib">Muhammad\nJazib Khan</string>
    <string name="waqas">Waqas Ahmad</string>
    <string name="bilal">Bilal Zahid</string>
    <string name="www.cricflex.com">www.cricflex.com</string>
    <string name="we_can_help">We Can Help</string>
    <string name="please_find">Please find the following tutorial screens to help you on how to use CricFlex Band:</string>
    <string name="charge_band">Charge your band</string>
    <string name="position_band">Position your CricFlex Band</string>
    <string name="connect_band">Connect with your band</string>
    <string name="calibration">Calibration</string>
    <string name="definition">Definitions</string>
    <string name="sync_data">Sync Data</string>
    <string name="save_session">Save Session</string>
    <string name="mail_us">Or you can mail us on:</string>
    <string name="email">info@cricflex.com</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="charging_instructions">Charging Instructions:</string>
    <string name="plug_charger">Plug the charger into power socket</string>
    <string name="plug_band">Plug the other end of the cable into the port on the top of band</string>
    <string name="led_red">Make sure that the led on band turns Red when you plug in the cable</string>
    <string name="led_green">The led will turn green when the band is fully charged</string>
    <string name="band_positioning">Band Positioning:</string>
    <string name="white_dot">Make sure that the white dot on the band aligns with your elbow</string>
    <string name="tighten_flaps">Tighten the flaps so that the band does not slip off your arm</string>
    <string name="band_connection">Connect Band:</string>
    <string name="switch_on">Turn on the switch on the band</string>
    <string name="start_app">Start the CricFlex app and press "Start Bowling"</string>
    <string name="ble_connect">See if the connection icon is not green then press the connection button once, it will ask you for turning the Bluetooth on and then the phone will be connected with the band.</string>
    <string name="calibration_heading">Calibration:</string>
    <string name="accurate_measurement">For more accurate measurement of your bowling metrics, the band needs to be calibrated on your arm whenever you wear it. You will be asked to calibrate whenever you start a new bowling session. You can skip the calibration but it is recommended that you calibrate before every new session.</string>
    <string name="four_steps">It’s a very simple 4 step process:</string>
    <string name="calibration_1">Straighten your elbow across the straight strip (provided with the band) and press the OK button on the screen. It will take 3 seconds and when the app shows “tick” proceed to next.</string>
    <string name="calibration_2">Bend your elbow across the 45° angled strip (provided with the band) and press OK button on the screen. It will take 3 seconds and when the app shows “tick” proceed to next.</string>
    <string name="calibration_3">Twist your arm towards your right as much as you can and press OK button on the screen. It will take 3 seconds and when the app shows “tick” proceed to next.</string>
</resources>