<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/setup_profile"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivitySetupProfile"
    android:background="@drawable/bkd13">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <com.example.cricflex.CircleImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:id="@+id/profilepicture"
            android:gravity="center"
            android:src="@drawable/profile_icon"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/light"
            android:layout_weight="1"/>

    </LinearLayout>





    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true">




        <!--Gender-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/gender"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rdbMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/male"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />

                <RadioButton
                    android:id="@+id/rdbFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RadioGroup>
        </LinearLayout>


        <!--weight-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/weight"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" >
        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="3"
                android:hint="@string/enter_weight_here"
                android:textColor="@color/text_light"
                android:textColorHint="@color/text_hint"
                android:id="@+id/pv_weight"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="KG"
                android:textColor="#ffffff"
                android:textStyle="bold" />


        </LinearLayout>


        <!--Location-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" >
        </TextView>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/country_flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:scaleX="0.5"
                android:scaleY="0.5" />
            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/text_light"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:hint="@string/select_country"/>

        </LinearLayout>


        <!--Date of Birth-->

        <TextView
            android:id="@+id/dateofbirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/date_of_birth"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" >
        </TextView>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#ffffff" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            android:id="@+id/stp_dob"
            android:drawableStart="@drawable/calendar_icon"
            android:drawablePadding="10dp"
            android:textColor="#FFFFFF"
            android:hint="@string/select_date"
            android:textColorHint="@color/text_hint"
            android:layout_weight="1"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/stp_button_next"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:background="@drawable/button1_bg"
            android:id="@+id/stp_next"
            android:layout_weight="1"/>

    </LinearLayout>


</RelativeLayout>
