<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center_vertical"
            android:background="@color/c350">

            <TextView
                android:id="@+id/charging_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charging_instructions"
                android:textColor="@color/text_light"
                android:textStyle="bold"
                android:textSize="22sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="20dp"
            android:gravity="start">

            <LinearLayout
                android:id="@+id/inst_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/number_1"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/plug_charger"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/inst_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/inst_1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/number_2"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/plug_band"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>



            <LinearLayout
                android:id="@+id/inst_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/inst_2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/number_3"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/led_red"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/inst_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/inst_3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:text="@string/number_4"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/led_green"
                    android:textColor="@color/text_light"
                    android:textStyle="normal"
                    android:textSize="20sp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>